Version 2.02.169 - 
=====================================
  Avoid parallel usage of cpg_mcast_joined() in clvmd with corosync.
  Support raid6_{ls,rs,la,ra}_6 segment types and conversions from/to it.
  Support raid6_n_6 segment type and conversions from/to it.
  Support raid5_n segment type and conversions from/to it.
  Support new internal command _dmeventd_thin_command.
  Introduce new dmeventd/thin_command configurable setting.
  Use new default units 'r' for displaying sizes.
  Also unmount mount point on top of MD device if using blkdeactivate -u.
  Restore check preventing resize of cache type volumes (2.02.158).
  Add missing udev sync when flushing dirty cache content.
  vgchange -p accepts only uint32 numbers.
  Report thin LV date for merged LV when the merge is in progress.
  Detect if snapshot merge really started before polling for progress.
  Checking LV for merging origin requires also it has merged snapshot.
  Extend validation of metadata processing.
  Enable usage of cached volumes as snapshot origin LV.
  Fix displayed lv name when splitting snapshot (2.02.146).
  Warn about command not making metadata backup just once per command.
  Enable usage of cached volume as thin volume's external origin.
  Support cache volume activation with -real layer.
  Improve search of lock-holder for external origin and thin-pool.
  Support status checking of cache volume used in layer.
  Avoid shifting by one number of blocks when clearing dirty cache volume.
  Extend metadata validation of external origin LV use count.
  Fix dm table when the last user of active external origin is removed.
  Improve reported lvs status for active external origin volume.
  Fix table load for splitted RAID LV and require explicit activation.
  Always active splitted RAID LV exclusively locally.
  Do not use LV RAID status bit for segment status.
  Check segtype directly instead of checking RAID in segment status.
  Reusing exiting code for raid image removal.